Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-02-15 (SVN):
    * rpm spec file: Added "--with gtk3" build option for the launcher.

2012-02-15 (SVN):
    * menu.c: Added menu item for anisotropic filter level. Minor clean
      up in the opengl features menu.

2012-02-14 (SVN):
    * updated documentation for the anisotropic texture filter support.

2012-02-14 (SVN):
    * glheader.h,glquake.h,gl_func.h,gl_vidnt.c,gl_vidsdl.c,gl_draw.c:
      Added support for anisotropic texture filtering, controlled by the
      new gl_texture_anisotropy cvar: valid values between 1 to whatever
      the driver returns as maximum. The callback to the new cvar sets
      all the mipmap texture filters whenever the cvar's value changes.

2012-02-14 (SVN):
    * gl_warp.c: set lowsky and upsky texture filters as GL_LINEAR

2012-02-14 (SVN):
    * gl_draw.c, menu.c, gl_rmisc.c, draw.c: Reverted an old patch about
      how multiplayer menu player setup pictures are drawn.

2012-02-14 (SVN):
    * gl_vidnt.c, gl_vidsdl.c: Cleaned up VID_Init, VID_ChangeConsize and
      VID_ConWidth where we set the conwidth. Allowed conwidth settings
      even as low as 320.

2012-02-14 (SVN):
    * gl_draw.c, gl_rmisc.c, gl_vidnt.c,gl_vidsdl.c: Revised the default
      texture filter mode settings by feeding specific preferences to
      GL_LoadTexture and not explicitly setting the MAG_ and MIN_FILTER
      unless necessary. The console and menu fonts as well as the status
      bar text have much better readability now when the 2D elements are
      scaled up by either using the menu option or the -conwidth command
      line switch.

2012-02-12 (SVN):
    * d_polyse.c: Fixed the long-standing bug of EF_SPECIAL_TRANS models
      being drawn with incorrect transparency when compiled without the
      x86 assembler routines: D_PolysetDrawSpans8T5() shouldn't refer to
      acolormap, fixed thusly.

2012-02-12 (SVN):